updated payment details

--- a/en/about.html
+++ b/en/about.html
@@ -108,7 +108,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="row align-items-center">
             <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0 align-middle">
                 <a class="d-block" href="/en/index.html">
-                  <img loading="lazy" src="/assets/images/logo-white.png" alt="University of Applied Vedic Sciences">
+                  <img loading="lazy" src="/assets/images/logo.png" alt="University of Applied Vedic Sciences">
                 </a>
             </div><!-- logo end -->
 
@@ -120,7 +120,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <a target="_form" href="/en/payment_center.html" class="btn btn-primary btn-circled">Payment Center</a>
             </p>
             <p>
-              <a target="portal" href=" https://login.vedasuniversity.org/student/login" class="btn btn-primary btn-circled">Student Portal</a>
+              <a target="portal" href=" https://login.vedasuniversity.org/student/userlogin" class="btn btn-primary btn-circled">Student Portal</a>
               <a target="portal" href=" https://login.vedasuniversity.org/site/login" class="btn btn-primary btn-circled">Staff Portal</a>
             </p>
               <!--
@@ -375,9 +375,10 @@ FACEBOOK: https://www.facebook.com/themefisher
      <div class="row align-items-center">
        <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
 
-         <p>
-           <img src="/assets/images/about/Yajur_26_2.jpg" alt="" class="img-fluid">
-         </p>
+         <h3 style="color:red;">
+          यथे॒मां वाचं॑ कल्या॒णीमा॒वदा॑नि॒ जने॑भ्यः। ब्र॒ह्म॒रा॒ज॒न्या᳖भ्या शूद्राय॒ चार्या॑य च॒ स्वाय॒ चार॑णाय च। <br/>
+          प्रि॒यो दे॒वानां॒ दक्षि॑णायै दा॒तुरि॒ह भू॑यासम॒यं मे॒ कामः॒ समृ॑ध्यता॒मुप॑ मा॒दो न॑मतु ॥२ ॥
+         </h3>
          <p>
            According to Yajur Vēda mantra (26.2) (The above mantra) everyone in the universe is eligible to read Vēdas.
            According to Manu “educating people by teaching Vēdas is the best act that any individual or society can do”.
