--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="row align-items-center">
             <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0 align-middle">
                 <a class="d-block" href="/en/index.html">
-                  <img loading="lazy" src="/assets/images/logo-white.png" alt="University of Applied Vedic Sciences">
+                  <img loading="lazy" src="/assets/images/logo.png" alt="University of Applied Vedic Sciences">
                 </a>
             </div><!-- logo end -->
 
@@ -120,7 +120,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <a target="_form" href="/en/payment_center.html" class="btn btn-primary btn-circled">Payment Center</a>
             </p>
             <p>
-              <a target="portal" href=" https://login.vedasuniversity.org/student/login" class="btn btn-primary btn-circled">Student Portal</a>
+              <a target="portal" href=" https://login.vedasuniversity.org/student/userlogin" class="btn btn-primary btn-circled">Student Portal</a>
               <a target="portal" href=" https://login.vedasuniversity.org/site/login" class="btn btn-primary btn-circled">Staff Portal</a>
             </p>
               <!--
@@ -230,11 +230,11 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <section class="section-padding bg-yellow text-black">
     <div class="container pb-4 text-black">
-      <h3 class="text-black">
+      <h4 class="text-black">
 
-        तस्मा॑द्य॒ज्ञात्स॑र्व॒हुत॒ ऋचः॒ सामा॑नि जज्ञिरे ।  <br/><br/>
+        तस्मा॑द्य॒ज्ञात्स॑र्व॒हुत॒ ऋचः॒ सामा॑नि जज्ञिरे ।  <br/>
         छन्दां॑सि जज्ञिरे॒ तस्मा॒द्यजु॒स्तस्मा॑दजायत ॥९॥ <br/><br/>
-    </h3>
+      </h4>
   <p>
     The one who has no death, who is ever knowledgeable,
     who does not have even an iota of ignorance, who is always in bliss,
