--- a/en/payment_center.html
+++ b/en/payment_center.html
@@ -108,15 +108,19 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="row align-items-center">
             <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0 align-middle">
                 <a class="d-block" href="/en/index.html">
-                  <img loading="lazy" src="/assets/images/logo-white.png" alt="University of Applied Vedic Sciences">
+                  <img loading="lazy" src="/assets/images/logo.png" alt="University of Applied Vedic Sciences">
                 </a>
             </div><!-- logo end -->
 
             <div class="col-lg-9 align-baseline text-right pt-4">
               <h2 class="text-white">University of Applied Vēdic Sciences (Online)</h2>
               <label class="text-white">namaste@vedas.university</label> <br/>
+              <p>
+              <a target="_form" href="https://docs.google.com/forms/d/e/1FAIpQLScL3Q6yiNED2v-SM87FzJiNIL20WIKk7Qwod2ODUYs6dWhJpw/viewform" class="btn btn-primary btn-circled">Apply Now</a>
+              <a target="_form" href="/en/payment_center.html" class="btn btn-primary btn-circled">Payment Center</a>
+            </p>
             <p>
-              <a target="portal" href=" https://login.vedasuniversity.org/student/login" class="btn btn-primary btn-circled">Student Portal</a>
+              <a target="portal" href=" https://login.vedasuniversity.org/student/userlogin" class="btn btn-primary btn-circled">Student Portal</a>
               <a target="portal" href=" https://login.vedasuniversity.org/site/login" class="btn btn-primary btn-circled">Staff Portal</a>
             </p>
               <!--
@@ -240,30 +244,57 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <h4 class="my-3">Student Payments to the University</h4>
 
                 <p>
-                    <b>(1) <u>Students from India:</u></b> <br/>
-                    For checks, and direct deposits, please use the following Bank Account: <br/><br/>
+                    We provide multiple ways to make the student fee payments.
+                </p>
+                <ol>
+                    <li>Through Bank Transaction using direct deposit (for students from India) </li>
+                    <li>Through Direct Bank Transaction using Zelle Payment (for students from USA)</li>
+                    <li>Through Stripe Payment Gateway for Credit Card/Debit Card Payment</li>
+                </ol>
+                <br/><br/>
+
+                <h3 class="pb-2 text-primary">(1) Direct deposit (for students from India)</h3>
+                <p>
+
+                    For checks, and direct deposits, please use the following Bank Account for students from India: <br/><br/>
                     <b>CHAGANTI VENKATA RAMANA</b> <br/>
                     Bank Account: <b>50100597353390</b><br/>
                     HDFC Bank (Chandanagar, Hyderabad PIN 500050, India) <br/>
                     RTGS/NEFT IFSC: <b>HDFC0000045</b> <br/>
                     SWIFT CODE: <b>HDFCINBB</b>
                 </p>
-                <p>
-                    <br/>
-                    <b>(2) <u>Students from USA:</u></b> <br/>
-                    Please send payments through <b>Zelle Payment</b> to email address: <b>uavs2023@gmail.com</b>.
-                </p>
 
                 <p>
-                    <br/>
-                    <b>(3) <u>Students from Other Countries:</u></b> <br/>
-                    Please send payments through <b>Student Portal Payment Gateway</b>.
-                </p>
-
-                <p>
-                    <b><u>Important Note</u></b>: for all the payments that are done without using the Student Portal Payment Gateway must complete the following form after payment is completed: <br/><br/>
+                    Once the payment is done, please confirm the payment by entering the payment details here: <br/>
                     <a target="_form" href="https://docs.google.com/forms/d/e/1FAIpQLSecUWKX_yqouy4WToUS1h0kOCB6TJ9BbYTvwdiqBU_1RF5zAQ/viewform" class="btn btn-primary btn-circled">Payment Confirmation Form</a>
                 </p>
+
+                <br/><br/>
+                <h3 class="pb-2 text-primary">(2) Zelle Payment (for students from USA)</h3>
+                <p>
+                    Students from USA, please send payments through <b>Zelle Payment</b> to email address: <b>uavs2023@gmail.com</b>.
+                </p>
+
+                <p>
+                    Once the payment is done, please confirm your payment by entering the payment details here: <br/>
+                    <a target="_form" href="https://docs.google.com/forms/d/e/1FAIpQLSecUWKX_yqouy4WToUS1h0kOCB6TJ9BbYTvwdiqBU_1RF5zAQ/viewform" class="btn btn-primary btn-circled">Payment Confirmation Form</a>
+                </p>
+
+                <br/><br/>
+                <h3 class="pb-2 text-primary">(3) Credit Card/Debit Card Payment</h3>
+
+                <p>
+                    For students opting to make fee payments via the Stripe Payment Gateway, which accommodates both credit card and debit card transactions. <br/><br/>
+
+                    Stripe Payment Gateway - Student Payment URL: <br/>
+                    <a target="stripe" href="https://buy.stripe.com/cN2cPK2QP3wf1So5kk"  class="btn btn-primary btn-circled">Stripe - Fee Installment Payment</a>
+
+                    <br/><br/>
+                    Alternatively, you can use your smartphone camera to scan the QR Barcode below and directly access the Stripe Payment Gateway. <br/><br/>
+                    <img loading="lazy" src="/assets/images/stripe_qr.png" style="width:200px;" alt="Stripe Payment Gateway QR Barcode">
+                </p>
+
+
 
             </div>
         </div>
