fixed student portal url

--- a/en/payment_center.html
+++ b/en/payment_center.html
@@ -117,9 +117,10 @@ FACEBOOK: https://www.facebook.com/themefisher
               <label class="text-white">namaste@vedas.university</label> <br/>
               <p>
               <a target="_form" href="https://docs.google.com/forms/d/e/1FAIpQLScL3Q6yiNED2v-SM87FzJiNIL20WIKk7Qwod2ODUYs6dWhJpw/viewform" class="btn btn-primary btn-circled">Apply Now</a>
+              <a target="_form" href="/en/payment_center.html" class="btn btn-primary btn-circled">Payment Center</a>
             </p>
             <p>
-              <a target="portal" href=" https://login.vedasuniversity.org/student/userlogin" class="btn btn-primary btn-circled">Student Portal</a>
+              <a target="portal" href=" https://login.vedasuniversity.org/site/userlogin" class="btn btn-primary btn-circled">Student Portal</a>
               <a target="portal" href=" https://login.vedasuniversity.org/site/login" class="btn btn-primary btn-circled">Staff Portal</a>
             </p>
               <!--
