--- a/en/payment_center.html
+++ b/en/payment_center.html
@@ -284,17 +284,31 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <h3 class="pb-2 text-primary">(3) Credit Card/Debit Card Payment</h3>
 
                 <p>
-                    For students opting to make fee payments via the Stripe Payment Gateway, which accommodates both credit card and debit card transactions. <br/><br/>
+                    For students opting to make fee payments via the Stripe Payment Gateway, which accommodates both credit card and debit card transactions.
+                    <br/><br/>
 
-                    Stripe Payment Gateway - Student Payment URL: <br/>
-                    <a target="stripe" href="https://buy.stripe.com/cN2cPK2QP3wf1So5kk"  class="btn btn-primary btn-circled">Stripe - Fee Installment Payment</a>
+                    Please note that there may be applicable transaction fees for debit/credit card payments.
+                </p>
+                <br/>
+                <h4>Admission Fee</h4>
+                <p>
+                    Stripe Payment Gateway - Student Payment URL for Admission Fee: <br/>
+                    <a target="stripe" href="https://buy.stripe.com/28o7vqdvt4Aj7cI8wB"  class="btn btn-primary btn-circled">Stripe - Admission Fee Payment</a>
+                    <br/><br/>
+                    Alternatively, you can use your smartphone camera to scan the QR Barcode below and directly access the Stripe Payment Gateway for Admission Fee. <br/><br/>
+                    <img loading="lazy" src="/assets/images/strip_qr_admission.png" style="width:200px;" alt="Admission Fee - Stripe QR Barcode">
+
+                </p>
+                <br/><br/>
+                <h4>Tuition Installment Fee</h4>
+                <p>
+                    Stripe Payment Gateway - Student Payment URL for Tuition Fee Installment: <br/>
+                    <a target="stripe" href="https://buy.stripe.com/3cs9Dy1MLfeX8gM5ko"  class="btn btn-primary btn-circled">Stripe - Fee Installment Payment</a>
 
                     <br/><br/>
-                    Alternatively, you can use your smartphone camera to scan the QR Barcode below and directly access the Stripe Payment Gateway. <br/><br/>
-                    <img loading="lazy" src="/assets/images/stripe_qr.png" style="width:200px;" alt="Stripe Payment Gateway QR Barcode">
+                    Alternatively, you can use your smartphone camera to scan the QR Barcode below and directly access the Stripe Payment Gateway for Tuition Installment Fee. <br/><br/>
+                    <img loading="lazy" src="/assets/images/strip_ar_tuition_installment.png" style="width:200px;" alt="Tuition Installment Fee - Stripe QR Barcode">
                 </p>
-
-
 
             </div>
         </div>
