--- a/en/welcome-advisors.html
+++ b/en/welcome-advisors.html
@@ -229,64 +229,79 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <section class="pt-4">
     <div id='top' class="container">
-        <h2>Greetings from the Board of Directors</h2>
+        <h2>Greetings from the Board of Advisory Council Members</h2>
         <p>
-            <a class='link' href="#murali">Director: Murali Krishna Cheruvu</a>
+            <a class='link' href="#arrojhwala">Honorable Advisory Council Member: Arrojhwala Prabhakara Sharma</a>
         </p>
         <p>
-            <a class='link' href="#rao">Director: Rao Panidau</a>
+            <a class='link' href="#sonty">Honorable Advisory Council Member: Dr. Sarada Purna Sonty</a>
         </p>
         <p>
-            <a class='link' href="#sastry">Director: Venkta Sastry Munnagala</a>
+            <a class='link' href="#koduri">Honorable Advisory Council Member: Dr. Subbarao Koduri</a>
         </p>
 
     </div>
 </section>
 
-<section id="murali" class="pt-4">
+<section id="arrojhwala" class="pt-4">
     <div class="container">
-        <h3>Greetings from Director: Murali Krishna Cheruvu</h3>
+        <h3>Greetings from Honorable Advisor: Arrojhwala Prabhakara Sharma</h3>
+        <p>🎈ఓ3మ్🎈 </p>
+        <p>🍀శుభ కామన🍀 </p>
+        <p>
+            వేదవిద్యను క్రియాత్మికముగ జేయు వేదవిశ్వవిద్యాలయములోకి ప్రవేశిం చిన విద్యార్థినీ విద్యార్థులందరికి
+            శుభాశిస్సులు.స్వాగతం!సుస్వాగ తం!!
+        </p>
+        <p>
+            శిక్ష,కల్పము,వ్యాకరణము,ఛందస్సు, నిరుక్తము మరియు జ్యోతిష్యము యీ షడంగముల యుక్తముగ వేదమున ధ్యయనము చేయాలన్న మీ
+            ఆలో చన దివ్యమైనది.ఈ దివ్యమయిన సంకల్పము మీకు ఉదయించడం మీరు పూర్వజన్మములో సుకృత కర్మలు చేసారనడానికి నిదర్శనము.
+        </p>
+        <p>
+            సృష్ట్యాదిలో పరమేశ్వరుడు ఋక్, యజు,సామ,అథర్వములను నాలుగు వేదములను క్రమముగా అగ్ని,వాయు,ఆదిత్య,అంగీరస ఋషుల
+            అత్మలలో ప్రకాశపరచాడు. వారినుండి నాలుగు వేదములను బ్రహ్మయను ఋషి గ్రహించాడు. తదాది జైమిని ఋషి పర్యంతము
+            అనగా మహాభారతయుద్దము వరకు
+            వేదప్రచారము కొనసాగుతూ వచ్చిన ది.ఆ తదుపరి ప్రచారము లుప్తమ యినది. దానిని “శ్రీమతి యశోదా బాయి-కర్షన్ జీ
+            త్రివేదిల సుపుత్రు డు,దణ్డి విరజానంద సరస్వతి శిష్యులైన మహర్షి స్వామి దయానం దసరస్వతి యతివర్యులు” పునరు
+            ద్ధరించారు.
+        </p>
+        <p>
+            వేదము పరమేశ్వరుని వాణి.”దేవస్య పశ్య కావ్యం న మమార న జీర్యతి (అథర్వవేదము.10-8-32) అంటున్నది,అథర్వము.
+            (దేవస్య) పరమాత్ముని (కావ్యమ్) కావ్యమైన వేదమును(పశ్య)దార్శనిక దృష్టితో చూడుడు-అధ్యయనము
+            చేయుడు.యిది( న,మమార)నశించునది కాదు.ఇది అవినాశి-నిత్య మయినది. శాశ్వతమయినది(న జీర్యతి) దీనికి వృద్ధాప్యమునూ
+            లేదు.ఇందులోని విషయాలు సర్వ కాల సర్వాస్థలయందును ఆచరణా త్మకమయినవి.నిత్య నూతనమై నవి.వేదములుత్పన్నము లై
+            196,085,3124 సంవత్సరముల యినవి.అనగా నేటి సప్తమ వైవస్వత మన్వంతరములోని (28)వ చతు ర్యుగమువరకు.యింకను సావర్ణ్యాది
+            ఏడు మన్వంతరముల కాలము గడువవలసియున్నది.అప్పుడును యిప్పుడు మీరు అధ్యయనము చేయుచున్న వేదములే అమలులో నుండగలవు.ఈ
+            సృష్టియే కాదు రాబోవు కల్పకల్పాంతరములలోను వేదమిట్లే యుండగలదు. మార్పుల కు లోను గాని నిత్యము,సత్యమైన వేదమును మా
+            వేద విశ్వవిద్యాల యములో చదువుచున్న మీరు ధన్యజీవులు.”ఏది చదివిన తరు వాత, మరొకటి చదువవలసిన అవ సరముండదో, ఏది
+            వినిన తరువాత, మరొకటి వినవలసిన అవసరము లేదో,ఏది ఎఱిగిన తరువాత మరొకటి యెఱుగవలసిన అవసరముండదో” అదియే వేదము.
 
-        <p><b>Dear University of Applied Vedic Sciences Community</b>,</p>
+        </p>
+        <p>
+            ”నిష్కార ణో ధర్మః షడఙ్గో వేదోఽధ్యే యో జ్ఞేయశ్చితి।” యిట్టి వేదమును ఫలాపేక్ష లేకుండా నిష్కారణముగా నైనను,
+            అధ్యయనము చేయవలసి నదే నన్నాడు, పతంజలి మహర్షి.
+            వేదమహిమను పతంజలి మహర్షి
+            యింకనాృూ వర్ణిస్తూ యిలా అన్నాడు.
+            “ఏకః శబ్దం సమ్యజ్ఞాతం సుప్రయుక్తః
+            స్వర్గేలోకే కామలోక దుగ్భవతి”వేదములోని ఏ ఒక్క శబ్దమునైనను
+            సరైన స్థితిలో అర్థము చేసుకుని, దానిని ఆచరణలోకి తీసుకొనివచ్చిన ఈ పృథివిని స్వర్గతుల్యముగ జేయవ చ్చును.
+        </p>
+        <p>
+            “వేదము సమస్త సత్యవిద్యల పుస్తక ము”అన్నారు మహర్షి స్వామి దయా నంద సరస్వతి. ఆయుర్వేదము,ధను ర్వేదము(రాజధర్మము
+            మరియు శస్త్రాస్త్రముల నిర్మాణము అనగా, బ్రహ్మాస్త్రము,పాశుపతాస్త్రము,వాయువ్యాది అస్త్రములు) గాంధర్వవేదము
+            (నారద, తుంబురాది ఋషుల సంగీత విద్య) మరియు అర్థవేదము అనగా శిల్పవిద్య. దీని అంతర్గతంగా భూగర్భవిద్య,ఖగోళ విద్య
+            దూరశ్రవణ ము,దూరదర్శనము,నౌవిమానాది విద్య, మనోవేగమునకు తీసి పోని యానములు నిర్మాణము కలదు. యివి క్రమముగ
+            ఋగ్యజుస్సామాథర్వ వేదములకు సంబంధించిన ఉప వేదములు.ఇవి నేర్చుకొను నిమిత్త ము వేదమునధ్యయనము చేసి యీ ప్రపంచమునకు
+            ఉపకారం చేయవ లయును.ఋషుల భూమియైన మన మాతృదేశ ఋణము నుండి విముక్తులై మనుష్యజన్మను సార్థకం చేసికొనవలయును.అనగా
+            ధర్మార్థ కామమోక్షములు పొందవలయును. పరమేశ్వరుడు మీకు స్థిరమైన ధార ణావతియైన బుద్ధిని, దీర్ఘజీవనము ను,సంపూర్ణ
+            ఆరోగ్యమును ప్రసాదిం చి,మీ కోర్కె నీడేర్చు గాక!
+        </p>
 
-        <p>I hope this message finds you all in good health and high spirits. It is with immense pleasure that I extend
-            a warm
-            welcome to all the new students who have recently joined our prestigious University of Applied Vedic
-            Sciences. Your
-            decision to become a part of our academic family is truly an honor, and we are excited to embark on this
-            educational
-            journey together.</p>
-
-        <p>As the Director of the University, I am thrilled to witness the growth of our student community. Each new
-            addition
-            brings unique perspectives, talents, and aspirations, enriching the diversity that defines our institution.
-            I
-            encourage you to embrace this opportunity to connect with fellow students, faculty, and staff members who
-            are here
-            to support and guide you throughout your academic endeavors.</p>
-
-        <p>Our commitment to fostering a collaborative and innovative learning environment is unwavering. To enhance
-            your
-            experience at the University of Applied Vedic Sciences, we welcome any feedback, ideas, or concerns you may
-            have.
-            Whether it's technical challenges, suggestions for improvement, or innovative ideas, your input is
-            invaluable in
-            shaping the future of our university.</p>
-
-        <p>Feel free to reach out to us at <a class='link'
-                href="mailto:namaste@vedas.university">namaste@vedas.university</a> with any
-            thoughts or questions you may have. We are dedicated to creating an atmosphere where your voices are heard,
-            and your
-            contributions are acknowledged.</p>
-
-        <p>Once again, welcome to the University of Applied Vedic Sciences. We look forward to witnessing your academic
-            achievements, personal growth, and the lasting impact you will undoubtedly make within our community.</p>
-
-        <p>Best wishes for a successful and fulfilling academic year!</p>
-
-        <p>Warm regards,</p>
-        <p><b>Murali Krishna Cheruvu</b><br>
-            Director<br>
+        <p> శుభం భవతు!వేదవిద్యా ప్రాప్తిరస్తు!</p>
+        <p><b> A.Prabhakara Sharma</b> <br />
+            M.A,LLM,M.phil. ADVOCATE <br />
+            (Ex.Principal,Justice Kumarayy a College of Law, Karimnagar)
+            <br>
+            Honorable Advisory Council Member<br>
             University of Applied Vedic Sciences
         </p>
         <div>
@@ -295,26 +310,41 @@ FACEBOOK: https://www.facebook.com/themefisher
     </div>
 </section>
 
-<section id="rao" class="pt-4">
+<section id="sonty" class="pt-4">
     <div class="container">
-        <h3>Greetings from Director: Rao Panidapu</h3>
+        <h3>Greetings from Honorable Advisor: Dr. Sarada Purna Sonty</h3>
 
-        <p>Dear Students,</p>
+        <p>Dear Revered Acharyas, esteemed readers and Fellow students,</p>
+        <p>Happy Greetings and Welcome to The University of Applied Vedic Sciences.</p>
+        <p>I, Sarada Purna, am happy that you all are holding this page going through these lines.</p>
+        <p>We are Here for &#39;The Veda Vidya - <b>“వేద విద్య- वेद विद्य “</b>. To learn how to Think , that
+            really means &#39;learning how to exercise control over how and what we think, which defines
+            wisdom&#39;. &#39;The Arc of wisdom - Veda&#39;, is seamlessly, boundlessly expansive than Human vision.
+            It wondrously bends. Bharat is the land of Veda, the only country founded on an &quot;Idea&quot; not
+            religion, Geography, ethnicity or Dogma. The Sacred, Secret Proposition is enshrined and rooted
+            in Veda Vangmaya.</p>
 
-        <p>I am Rao, a board director of the University of Applied Vedic Sciences. I thank you for your interest in the
-            program and for actively engaging in the learning process.</p>
+            <p>At UAVS - University of Applied Vedic Sciences, we will learn how to become
+                the next best version of ourselves. Mortal life goes through Transitions. Moving and flooding
+                from one experience to the next, seemingly endless, unsurmountable challenges at every turn,
+                we, for sure will find answers in “The Veda - a compendium of &quot; Reality &amp;Real World&#39;&#39; to reach
+                Greater Heights. The curriculum at UAVS gives benefit of Veda Dharma, concept, relevance,
+                methods of practice application. One will learn how to prioritize, eliminate distractions, set tasks,
+                strict schedules, perseverance, stamina for long term Goals, mold oneself into a unique Self.
+                Let us all together embark on the next phase of this wonderful journey of Life and Learning
+                &#39;Veda Vidya&#39;. Let us embrace the Superpowers of Vedic wisdom using technology, Science,
+                Silicon and Digitization, to realize that &quot; Tradition and Innovation” goes hand in hand.
+                <i>&quot;Knowing &amp; Knowledge&quot;</i> is everything there ever is.</p>
 
-        <p>I am writing this to understand any feedback, both positive and negative, that you may have with your
-            learning process thus far. As a new university, we understand that not everything would work perfectly.
-            Hence, we are keen to learn your feedback so that we can improve continuously and provide a better learning
-            experience for all students over time.</p>
+        <p>Time is ours; Century is ours. We have complete access to <b>&quot;The Veda&quot;</b>. Let us have a grip on
+            Inner Ecology, freedom, Dharma, Tradition, Science, and innovation through interactions at
+            UAVS. Your energy, interest and excitement enrich UAVS vibrant virtual campus.</p>
 
-        <p>Kindly provide your feedback by email to: <a class='link'
-                href="mailto:namaste@vedas.university">namaste@vedas.university</a></p>
+        <p>We, the Board welcome you on a remarkable Journey of Vedic Education.</p>
 
-        <p>Best regards,</p>
-        <p><b>Rao Panidapu</b><br>
-            Director<br>
+        <p>Happy and gratefully,</p>
+        <p><b>Sarada Purna Susarla Sonty</b><br>
+            Honorable Advisory Council Member<br>
             University of Applied Vedic Sciences
         </p>
         <div>
@@ -323,34 +353,36 @@ FACEBOOK: https://www.facebook.com/themefisher
     </div>
 </section>
 
-<section id="sastry" class="pt-4">
+<section id="koduri" class="pt-4">
     <div class="container">
-        <h3>Greetings from Director: Venkata Sastry Munnagala</h3>
+        <h3>Greetings from Honorable Advisor: Dr. Subbarao Koduri</h3>
 
-        <p>Good morning/evening!</p>
+        <p>Dear University of Applied Vedic Sciences Students,</p>
 
-        <p>It's wonderful to see such enthusiasm and warm welcoming words for the first batch at the University of
-            Applied Vedic Sciences under the guidance of Dr. Chaganti Garu. Congratulations to everyone on being part of
-            this
-            distinguished university.</p>
+        <p>మీ అందరికి నా అభినందనలు. మిత్రులారా, మీరంతా వేదాలలో నెలకొనిఉన్న విజ్ఞాన విషయాలను తెలుసుకోవాలని, పరిశోధించాలని
+            కుతూహలం కలిగి ఉండటం ముదావహము. నేనునూ ఒక జిజ్ఞాసువుని, జిజ్ఞాసాభక్తుడను.
+        </p>
 
-        <p>Embarking on the study of Vedas is indeed a prestigious and valuable journey, and I am moved to hear your
-            optimism about overcoming the initial challenges with Dr. Chaganti Garu's support. The encouragement to
-            reach out
-            to directors in case of any challenges reflects a commitment to ensuring a positive and smooth learning
-            experience for everyone.</p>
+        <p> నేను ఎక్కువగా చదువుకోకపోయినా, ఆరోగ్యం అనుకూలించక పోయినా, నాలోని జిజ్ఞాస వల్ల ఎట్లో కొన్ని పుస్తకాలు చదవ
+            గలిగాను, వాటి గురించి ఆలోచించ గలిగాను, మరియు 50 పుస్తకాలు వ్రాసాను కూడా. అవి వ్యవహార భాషలో వ్రాయటం వలన
+            సామాన్య ప్రజలకు బాగా అర్థమైయ్యాయి, చాలా ప్రశంసలు కూడా వచ్చాయి.
+        </p>
 
-        <p>Wishing each one of you the very best on this journey, and congratulations on the start of your academic
-            endeavor. May you all successfully complete your Ph.D. and contribute to the world with new ideas inspired
-            by the teachings of Vedas.</p>
+        <p> కనుక మీరును కొన్ని విషయాలపై పరిశోధించండి, ఆలోచించండి. మీరు నా కన్నా ఎక్కువ పుస్తకాలు వ్రాయకలుగుతారు మరియూ
+            సర్తిఫికేట్ / పీ.హెచ్.డి పొంద గలుగుతారు.
+        </p>
 
-        <p>Thank you for choosing the University of Applied Vedic Sciences. Let the exploration and dissemination of the
-            power of Vedas begin! If there's anything specific you'd like to discuss or if you have questions, feel free
-            to share.</p>
+        <p> శ్రీ వేంకట చాగంటి గారు చేయుచున్న కృషి చాలా ప్రశంసనీయమైనది. మా గురువులైన మహర్షి దయానందులవారును ఇటువంటి
+            విశ్వవిద్యాలయము స్థాపించాలని కలగన్నారు. అది అప్పుడు నెరవేరలేదు. అది ఈ విశ్వవిద్యాలయము ద్వారా సాకారమైనందుకు
+            చాలా ఆనందముగా ఉన్నది.
+        </p>
 
-        <p>Best regards,</p>
-        <p><b>Venkata Sastry Munnagala</b><br>
-            Director<br>
+        <p>మీ అందరకు నా అభినందనలు ఆశీస్సులు.
+        </p>
+        <p>శుభం భూయాత్,</p>
+        <p><b>Dr. K Subba Rao,</b><br>
+            సుమ్నార్థి <br/>
+            Honorable Advisory Council Member<br>
             University of Applied Vedic Sciences
         </p>
         <div>
