added dr. narayana rao profile

--- a/en/profiles/prabhakara-sharma.html
+++ b/en/profiles/prabhakara-sharma.html
@@ -26,7 +26,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Vedic Sholar: Prabhakara Sharma - University of Applied Vēdic Sciences</title>
+  <title>Vedic Scholar: Sri. Arrojhwala Prabhakara Sharma - University of Applied Vēdic Sciences</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -231,24 +231,24 @@ FACEBOOK: https://www.facebook.com/themefisher
 <section class="section-padding">
   <div class="container">
     <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
-    <h3 class="pt-4 mb-3">Advisory Board Member: <br/>Arrojhwala Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
+    <h3 class="pt-4 mb-3">Advisory Board Member: <br/>Sri. Arrojhwala Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
     <div class="row">
       <div class="col-lg-6 col-md-4 align-items-top" style="align-items: center;">
         <img src="/assets/images/profiles/prabhakara_sharma.jpg" alt="" class="img-fluid w-100 align-baseline">
       </div>
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-       
+
         <p class="mb-4">
-          During the period from 1991 to 1997, Prabhakara Shrma Ji served as Principal for Justice Kumarayya College of Law, 
+          During the period from 1991 to 1997, Prabhakara Shrma Ji served as Principal for Justice Kumarayya College of Law,
           Karimnagar, Telangana, India and taught, C.P.C, Transfer of property Act, Law of Torts and Indian contract Act.
         </p>
-        <p> 
-          Prabhakara Sharma Ji learned four Vēdas, Brahmanas, six darshanas, eleven Upanishads, Ramayana & Mahabarata, under the 
+        <p>
+          Prabhakara Sharma Ji learned four Vēdas, Brahmanas, six darshanas, eleven Upanishads, Ramayana & Mahabarata, under the
           supreme guidance of pandit Venkateshwara Sastry Ji.
-        </p>       
+        </p>
 
       </div>
-     
+
     </div>
     <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
   </div>
