--- a/en/profiles/venkata-chaganti.html
+++ b/en/profiles/venkata-chaganti.html
@@ -26,7 +26,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Founder and Vedic Scholar: Dr. Venkata Chaganti - University of Applied Vēdic Sciences</title>
+  <title>Founder and Vedic Scholar: Dr. Sri. Venkata Chaganti - University of Applied Vēdic Sciences</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -231,7 +231,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 <section id="chaganti" class="section-padding">
   <div class="container">
     <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
-    <h3 class="pt-4 mb-3">Founder: Dr. Venkata Ramana Chaganti</h3>
+    <h3 class="pt-4 mb-3">Founder: Dr. Sri. Venkata Ramana Chaganti</h3>
     <p>
       Education: <br />
       Ph.D. in Physics, Georgia State University, Atlanta, Georgia, USA: 2009 -2015 <br />
