--- a/en/profiles/narayana-rao.html
+++ b/en/profiles/narayana-rao.html
@@ -26,7 +26,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Board Members and Advisory Team - University of Applied Vēdic Sciences</title>
+  <title>Vedic Scholar: M. Narayana Rao - University of Applied Vēdic Sciences</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -228,178 +228,59 @@ FACEBOOK: https://www.facebook.com/themefisher
 <!--/ Header end -->
 
 
-<!--  SECTION  -->
+<section class="section-padding">
+  <div class="container">
+    <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
+    <h3 class="pt-4 mb-3">Advisory Board Member: <br/>Sri. M. Narayana Rao, PhD in Environmental Engineering (New Zealand)</h3>
+    <div class="row">
+      <div class="col-lg-6 col-md-4 align-items-top" style="align-items: center;">
+        <img src="/assets/images/profiles/narayana_rao.png" alt="" class="img-fluid w-100 align-baseline">
+      </div>
+      <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
 
-  <section class="section-padding">
-    <div class="container">
-        <div class="pb-4">
-            <a class="a_underline" href="#board-members">Our Board Members</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="a_underline"  href="#advisory-members">Our Advisory Team</a>
+        <section class="pt-4">
+          <div class="container">
+            <h4 class="pb-4">Sri. Narayana Rao Musthi</h4>
+            <div><a class='pb-4 a_underline' href='https://www.linkedin.com/in/mnrao/?originalSubdomain=in'>LinkedInn Profile</a></div>
+            <p class="mt-4 mb-4">
+              Sri. Narayana Rao Musthi is a globally recognized environmental engineer, researcher, and advocate with over 45 years of expertise in education, consultancy, and sustainability practices. He has served as a faculty member at premier institutions such as IIT Roorkee and NIT Durgapur and later became the Director of NITTTR Chennai. After retiring in 2001, he joined JNTU Hyderabad as an Emeritus Professor, where he continued his academic and research pursuits until 2011.
+            </p>
+            <p class="mb-4">
+              Sri. Narayana Rao completed his PhD in Environmental Engineering and post-doctoral research in New Zealand. His work bridges ancient Vedic wisdom with modern environmental science, focusing on areas like climate change, solid and hazardous waste management, and sustainable campus designs.
+            </p>
+            <h5 class="pt-4 pb-2">Key Contributions</h5>
+            <p class="mb-4">
+              During his tenure, Sri. Narayana Rao conducted annual <b>Chandi Homas</b> at Sri Devi Veda Vidyalayam (SVV), Srisailam, for a decade during Navaratri celebrations. His studies demonstrated significant improvements in soil quality, water purity, and ecosystem health. He collaborated with the State Pollution Control Board and IITs to scientifically analyze the environmental benefits of <b>Agnihotra Kriya</b>, revealing measurable reductions in pollutants and enhanced nutrient cycles.
+            </p>
+            <h5 class="pt-4 pb-2">Academic Achievements</h5>
+            <ol class="ol_num pb-4">
+              <li>PhD in Environmental Engineering (New Zealand)</li>
+              <li>Post-Doctoral Research in Environmental Sustainability</li>
+              <li>Author of 5 textbooks, 150 video lessons, and 25 manuals</li>
+              <li>Supervised 250 Master's and PhD projects</li>
+              <li>Former Director, NITTTR Chennai</li>
+            </ol>
+            <h5 class="pt-4 pb-2">Awards and Recognitions</h5>
+            <ol class="ol_num pb-4">
+              <li>Recipient of 30 prestigious awards, including 4 Gold Medals</li>
+              <li>Global recognition for contributions to environmental education</li>
+              <li>Leadership in sustainable campus designs and climate resilience</li>
+            </ol>
+            <p class="pt-4 pb-4">
+              Sri. Narayana Rao continues to inspire researchers and environmentalists through his work, which integrates ancient Vedic practices with modern scientific principles to address global environmental challenges.
+            </p>
+            <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
           </div>
+        </section>
 
-      <div class="row">
-        <div id="board-members" class="col-lg-8">
-          <div>
-            <h3 class="mb-2">Our Board Members</h3>
-            <p></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="profiles/venkata-chaganti.html">
-          <img src="/assets/images/profiles/dr_venkata_chaganti.jpg" alt="" class="img-fluid rounded w-100">
-        </a>
-          <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-          -->
-          <a href="profiles/venkata-chaganti.html"><h4 class="mt-3">Dr. Sri. Venkata Ramana Chaganti</h4></a>
-          <p class="mb-0">Founder and Vēdic Scholar <br/>
-            <a class="a_underline" href="profiles/venkata-chaganti.html">profile page</a>
-          </p>
-
-        </div>
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="https://www.linkedin.com/in/raoplns/" target="nw">
-          <img src="/assets/images/profiles/rao_panidapu.png" alt="" class="img-fluid rounded w-100">
-        </a>
-           <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-        -->
-          <a href="https://www.linkedin.com/in/raoplns/" target="nw"><h4 class="mt-3">Sri. Rao Panidapu</h4></a>
-          <p class="mb-0">Board Member <br/>
-            <a class="a_underline" href="https://www.linkedin.com/in/raoplns/" target="nw">profile page</a>
-          </p>
-        </div>
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="https://www.linkedin.com/in/cheruvu/" target="nw">
-            <img src="/assets/images/profiles/murali_cheruvu.png" alt="" class="img-fluid rounded w-100" >
-          </a>
-           <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-        -->
-        <a href="https://www.linkedin.com/in/cheruvu/" target="nw"><h4 class="mt-3">Sri. Murali Krishna Cheruvu</h4></a>
-          <p class="mb-0">Board Member <br/>
-            <a class="a_underline" href="https://www.linkedin.com/in/cheruvu/" target="nw">profile page</a></p>
-        </div>
 
       </div>
+
     </div>
-  </section>
-  <!--  SECTION END  -->
+    <a class="pb-4 a_underline" href="/en/advisory.html">Back to Board Members and Advisory Team</a>
+  </div>
+</section>
 
-  <!--  SECTION  -->
-  <section class="section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8">
-          <div  id="advisory-members" >
-            <h3 class="mb-2">Our Advisory Team</h3>
-            <p></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="profiles/sarada-sonty.html">
-          <img src="/assets/images/profiles/dr_saradapurna_sonty_2.jpg" alt="" class="img-fluid rounded w-100">
-        </a>
-           <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-        -->
-        <a href="profiles/sarada-sonty.html"><h4 class="mt-3">Dr. Smt. Sarada Purna Susarla Sonty</h4></a>
-          <p class="mb-0">Advisor and Vēdic Scholar  <br/>
-            <a class="a_underline" href="profiles/sarada-sonty.html">profile page</a></p>
-        </div>
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="profiles/prabhakara-sharma.html">
-            <img src="/assets/images/profiles/prabhakara_sharma.jpg" alt="" class="img-fluid rounded w-100" >
-            </a>
-           <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-        -->
-        <a href="profiles/prabhakara-sharma.html"><h4 class="mt-3">Sri. Arrojhwala Prabhakara Sharma</h4></a>
-          <p class="mb-0">Advocate and Vēdic Scholar
-            <br/>
-            <a class="a_underline" href="profiles/prabhakara-sharma.html">profile page</a>
-          </p>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5">
-          <a href="profiles//subbarao-koduri.html">
-            <img src="/assets/images/profiles/subbarao_koduri.png" alt="" class="img-fluid rounded w-100" >
-            </a>
-           <!--
-          <ul class="list-unstyled list-inline team-social mt-4">
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-          </ul>
-        -->
-        <a href="profiles/subbarao-koduri.html"><h4 class="mt-3">Dr. Sri. Subbarao Koduri</h4></a>
-          <p class="mb-0">Vēdic Scholar
-            <br/>
-            <a class="a_underline" href="profiles/subbarao-koduri.html">profile page</a>
-          </p>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mt-5">
-        <a href="profiles//narayana-rao.html">
-          <img src="/assets/images/profiles/narayana_rao.png" alt="" class="img-fluid rounded w-100" >
-          </a>
-         <!--
-        <ul class="list-unstyled list-inline team-social mt-4">
-          <li class="list-inline-item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-          <li class="list-inline-item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-          <li class="list-inline-item"><a href="#!"><i class="fab fa-pinterest"></i></a></li>
-          <li class="list-inline-item"><a href="#!"><i class="fab fa-linkedin"></i></a></li>
-          <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
-        </ul>
-      -->
-      <a href="profiles/narayana-rao.html"><h4 class="mt-3">Dr. Sri. M. Narayana Rao</h4></a>
-        <p class="mb-0">Environmental and Vēdic Researcher
-          <br/>
-          <a class="a_underline" href="profiles/narayana-rao.html">profile page</a>
-        </p>
-      </div>
-    </div>
-    </div>
-  </section>
-  <!--  SECTION END  -->
 
   <footer id="footer" class="footer bg-overlay">
     <div class="footer-main">
