added dr. narayana rao profile

--- a/en/profiles/narayana-rao.html
+++ b/en/profiles/narayana-rao.html
@@ -242,6 +242,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="container">
             <h4 class="pb-4">Sri. Narayana Rao Musthi</h4>
             <div><a class='pb-4 a_underline' href='https://www.linkedin.com/in/mnrao/?originalSubdomain=in'>LinkedInn Profile</a></div>
+            <div><a class='pb-4 a_underline' href='https://scholar.google.co.in/citations?hl=en&user=0jJBTTwAAAAJ'>Google Scholar</a></div>
             <p class="mt-4 mb-4">
               Sri. Narayana Rao Musthi is a globally recognized environmental engineer, researcher, and advocate with over 45 years of expertise in education, consultancy, and sustainability practices. He has served as a faculty member at premier institutions such as IIT Roorkee and NIT Durgapur and later became the Director of NITTTR Chennai. After retiring in 2001, he joined JNTU Hyderabad as an Emeritus Professor, where he continued his academic and research pursuits until 2011.
             </p>
