--- a/en/profiles/narayana-rao.html
+++ b/en/profiles/narayana-rao.html
@@ -240,11 +240,11 @@ FACEBOOK: https://www.facebook.com/themefisher
 
         <section class="pt-4">
           <div class="container">
-            <h4 class="pb-4">Sri. Narayana Rao Musthi</h4>
+            <h4 class="pb-4">Sri. Narayana Rao Mushti</h4>
             <div><a class='pb-4 a_underline' target='_new' href='https://www.linkedin.com/in/mnrao/?originalSubdomain=in'>LinkedIn Profile</a></div>
             <div><a class='pb-4 a_underline'  target='_new' href='https://scholar.google.co.in/citations?hl=en&user=0jJBTTwAAAAJ'>Google Scholar</a></div>
             <p class="mt-4 mb-4">
-              Sri. Narayana Rao Musthi is a globally recognized environmental engineer, researcher, and advocate with over 50 years of expertise in education, consultancy, and sustainability practices. He has served as a faculty member at premier institutions such as IIT Roorkee and NIT Durgapur and later became the Director of NITTTR Chennai. After retiring in 2001, he joined JNTU Hyderabad as an Emeritus Professor, where he continued his academic and research pursuits until 2011.
+              Sri. Narayana Rao Mushti is a globally recognized environmental engineer, researcher, and advocate with over 50 years of expertise in education, consultancy, and sustainability practices. He has served as a faculty member at premier institutions such as IIT Roorkee and NIT Durgapur and later became the Director of NITTTR Chennai. After retiring in 2001, he joined JNTU Hyderabad as an Emeritus Professor, where he continued his academic and research pursuits until 2011.
             </p>
             <p class="mb-4">
               Sri. Narayana Rao completed his PhD in Environmental Engineering and post-doctoral research in New Zealand. His work bridges ancient Vedic wisdom with modern environmental science, focusing on areas like climate change, air pollution control, solid and hazardous waste management, and sustainable campus designs.
